--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.5.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "consign": "^0.1.2",
     "express": "^4.13.4",
     "mongoose": "^4.11.1",
