--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "babel-preset-es2015": "^6.5.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "consign": "^0.1.2",
     "express": "^4.13.4",
+    "jwt-simple": "^0.4.1",
     "mongoose": "^4.11.1",
-    "mongoose-schema-jsonschema": "^1.1.13"
+    "mongoose-schema-jsonschema": "^1.1.13",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0"
   }
 }
