--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API de gestão de tarefas",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "npm run apidoc && babel-node index.js",
+    "apidoc": "apidoc -i routes/ -o public/apidoc",
     "test": "export NODE_ENV=test && mocha test/**/*.js"
   },
   "repository": {
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/R3oLoN/ntask-api#readme",
   "devDependencies": {
+    "apidoc": "^0.15.1",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.2",
