Configuração do CORS

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "consign": "^0.1.2",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
     "jwt-simple": "^0.4.1",
     "mongoose": "^4.11.1",
