--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API de gestão de tarefas",
   "main": "index.js",
   "scripts": {
-    "start": "npm run apidoc && babel-node index.js",
+    "start": "npm run apidoc && npm run clusters",
+    "clusters": "babel-node cluster.js",
     "apidoc": "apidoc -i routes/ -o public/apidoc",
     "test": "export NODE_ENV=test && mocha test/**/*.js"
   },
