--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "compression": "^1.6.1",
     "consign": "^0.1.2",
     "cors": "^2.7.1",
     "express": "^4.13.4",
