--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "consign": "^0.1.2",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "helmet": "^1.1.0",
     "jwt-simple": "^0.4.1",
     "mongoose": "^4.11.1",
     "mongoose-schema-jsonschema": "^1.1.13",
