--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "helmet": "^1.1.0",
     "jwt-simple": "^0.4.1",
     "mongoose": "^4.11.1",
+    "mongoose-history": "^0.4.2",
     "mongoose-schema-jsonschema": "^1.1.13",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
