--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "npm run apidoc && npm run clusters",
     "clusters": "babel-node cluster.js",
     "apidoc": "apidoc -i routes/ -o public/apidoc",
-    "test": "export NODE_ENV=test && mocha test/**/*.js"
+    "test": "cross-env NODE_ENV=test mocha test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.2",
     "chai": "^3.5.0",
+    "cross-env": "^5.0.5",
     "mocha": "^2.4.5",
     "supertest": "^1.2.0"
   },
