--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "start": "npm run apidoc && npm run clusters",
     "clusters": "babel-node cluster.js",
     "apidoc": "apidoc -i routes/ -o public/apidoc",
-    "test": "cross-env NODE_ENV=test mocha test/**/*.js"
+    "test": "cross-env NODE_ENV=test mocha test/**/*.js",
+    "babel-node": "babel-node ."
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "apidoc": "^0.15.1",
     "babel-cli": "^6.5.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.2",
     "chai": "^3.5.0",
@@ -40,6 +42,10 @@
     "consign": "^0.1.2",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.7",
+    "graphql-compose": "^2.10.1",
+    "graphql-compose-mongoose": "^1.10.0",
     "helmet": "^1.1.0",
     "jwt-simple": "^0.4.1",
     "mongoose": "^4.11.1",
